--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,6 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
 
 }
