--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,7 @@ dependencies {
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.github.johnpersano:supertoasts:1.3.4@aar'
     compile project(path: ':backend', configuration: 'android-endpoints')
+    compile 'com.facebook.android:facebook-android-sdk:4.+'
+    compile "com.daimajia.swipelayout:library:1.2.0@aar"
+    compile 'com.github.jd-alexander:library:1.1.0'
 }
